[package]
name = "tracing-spanner"
description = "Span introspection library for `tracing`."
repository = "https://github.com/tascord/spanner"
version = "0.0.3"
edition = "2024"
license = "MIT"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.45.1", default-features = false, features = ["sync"] }
uuid = { version = "1.18.1", features = ["v4"] }
tracing = { version = "0.1.41", default-features = false, features = [
    "std",
    "log",
    "attributes",
] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "std",
    "env-filter",
    "ansi",
    "registry",
    "tracing-log",
    "smallvec",
    "parking_lot",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
